Add Prisma scripts for migration and database push

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:create": "prisma migrate dev --name mikulas",
+    "prisma:generate": "prisma db push",
+    "prisma": "npm run prisma:create && npm run prisma:generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
